Capacidad agarrar todas las noticias